footer nab var done

--- a/scrolling_videos/src/app/layout/footer/footer.component.html
+++ b/scrolling_videos/src/app/layout/footer/footer.component.html
@@ -1,3 +1,11 @@
 <div class="footerNav">
-  <div>FOOTER</div>
+  <div class="footerNav-button" (click)="changePage('home')">
+    <img src="../../../assets/icons/navBar/navbar-home-icon.webp" alt="" />
+  </div>
+  <div class="footerNav-button" (click)="changePage('search')">
+    <img src="../../../assets/icons/navBar/navbar-search-icon.webp" alt="" />
+  </div>
+  <div class="footerNav-button" (click)="changePage('about')">
+    <img src="../../../assets/icons/navBar/navbar-user-icon.webp" alt="" />
+  </div>
 </div>
