--- a/scrolling_videos/src/app/layout/footer/footer.component.scss
+++ b/scrolling_videos/src/app/layout/footer/footer.component.scss
@@ -10,5 +10,23 @@
   width: 100vw;
   max-width: 100vw;
   height: 80px;
-  background-color: grey;
+  background-color: black;
+  border-top: 1px solid white;
+  display: flex;
+  justify-content: space-between;
+}
+
+.footerNav-button {
+  width: 33%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+   
+  & img {
+    width: 33%;
+        max-width: 30px;
+    max-height: 30px;
+  }
 }
