--- a/scrolling_videos/src/app/modules/home/pages/home/home.component.scss
+++ b/scrolling_videos/src/app/modules/home/pages/home/home.component.scss
@@ -8,20 +8,21 @@
 .videoWindow {
   max-width: 100vw;
   width: 100vw;
-  max-height: 100vh;
-  height: 100vh;
+  max-height: calc(100vh - 80px);
+  height: calc(100vh - 80px);
   overflow-x: hidden;
   overflow-y: auto;
+  background-color: black;
 }
 
 .videoBackground {
   background-color: black;
-  width: 540px;
-  height: 960px;
+  width: 100vw;
+  height: calc(100vh - 80px);
 }
 
 .videoFrame {
-  width: 540px;
-    height: 960px;
+  width: 100vw;
+  height: calc(100vh - 80px);
   object-fit: contain;
 }
